# single-player-games-sliding-game

data/: highscores.json
fixtures/: 10x10.json  12x12.json  3x3.json  7x7.json
private/reference/: solver.py
private/scripts/: generate_fixtures.py  large_test_fixtures.py
python/: README.md  main.py  pyproject.toml
python/backend/engine/gamegenerator/: __init__.py  generator.py
python/backend/engine/gameplay/: __init__.py  game.py
python/backend/engine/gamesolver/: __init__.py  solver.py
python/backend/engine/gamestate/: __init__.py  state.py
python/backend/models/: __init__.py  board.py  highscore.py
python/frontend/cli/: input_handler.py
python/frontend/cli/rich/: app.py
python/frontend/cli/vanilla/: app.py
python/frontend/gui/pygame/: __init__.py  app.py
python/frontend/gui/pyqt/: __init__.py  app.py
python/tests/: conftest.py  test_solver.py
