[project]
name = "sliding-game"
version = "0.1.0"
description = "Sliding puzzle game — Python implementation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
    "pyqt6>=6.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.5",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-n auto"
timeout = 1
